// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel should render 1`] = `
<div
  className="position:absolute z:5 select:none"
  style={Object {}}
>
  <div
    className="b:1 b:solid b:gray-300 r:lg shadow:md items:center bg:white d:flex gap:2 p:2"
  >
    CONTENT
  </div>
</div>
`;

exports[`PanelButton should render 1`] = `
<div
  className="items:center r:md d:flex text:lg p:2 text:gray-800 bg:gray-800:hover text:white:hover cursor:pointer"
>
  CONTENT
</div>
`;
